--- a/deso2.tex
+++ b/deso2.tex
@@ -13,17 +13,17 @@
         \item Ta có:
         $$
         \begin{aligned}
-        & \mathrm{A}=\frac{2^{12} \cdot 3^5-4^6 \cdot 9^2}{2^2 \cdot 3^6+8^4 \cdot 3^5}-\frac{5^{10} \cdot 7^3-25^5 \cdot 49^2}{125 \cdot 7^3+5^9 \cdot 14^3}=\frac{2^{12} \cdot 3^5-2^{12} \cdot 3^4}{2^{12} \cdot 3^6+2^{12} \cdot 3^5}-\frac{5^{10} \cdot 7^3-5^{10} \cdot 7^4}{5^9 \cdot 7^3+5^9 \cdot 2^3 \cdot 7^3} \\
-        & \mathrm{~A}=\frac{2^{12} \cdot 3^4 3-1}{2^{12} \cdot 3^5 3+1}-\frac{5^{10} \cdot 7^3 1-7}{5^9 \cdot 7^3 1+2^3} \\
-        & \mathrm{~A}=\frac{2}{3 \cdot 4}-\frac{5 \cdot(-6)}{9} \\
+        & \mathrm{A}=\frac{2^{12} \cdot 3^5-4^6 \cdot 9^2}{2^2 \cdot 3^6+8^4 \cdot 3^5}-\frac{5^{10} \cdot 7^3-25^5 \cdot 49^2}{125 \cdot 7^3+5^9 \cdot 14^3}=\frac{2^{12} \cdot 3^5-2^{12} \cdot 3^4}{2^{12} \cdot 3^6+2^{12} \cdot 3^5}-\frac{5^{10} \cdot 7^3-5^{10} \cdot 7^4}{5^9 \cdot 7^3+5^9 \cdot 2^3 \cdot 7^3} \\[5px]
+        & \mathrm{~A}=\frac{2^{12} \cdot 3^4 3-1}{2^{12} \cdot 3^5 3+1}-\frac{5^{10} \cdot 7^3 1-7}{5^9 \cdot 7^3 1+2^3} \\[5px]
+        & \mathrm{~A}=\frac{2}{3 \cdot 4}-\frac{5 \cdot(-6)}{9} \\[5px]
         & \mathrm{~A}=\frac{1}{6}-\frac{-10}{3}=\frac{7}{2}
         \end{aligned}
         $$
         \item $$
         \begin{aligned}
-        & 4 B=1 \cdot 2 \cdot 3 \cdot 4+2 \cdot 3 \cdot 4 \cdot(5-1)+3 \cdot 4 \cdot 5 \cdot(6-2)+\ldots+17 \cdot 18 \cdot 19 \cdot(20-16) \\
-        & 4 B=1 \cdot 2 \cdot 3 \cdot 4+2 \cdot 3 \cdot 4 \cdot 5-1 \cdot 2 \cdot 3 \cdot 4+3 \cdot 4 \cdot 5 \cdot 6-2 \cdot 3 \cdot 4 \cdot 5+17 \cdot 18 \cdot 19 \cdot 20-16 \cdot 17 \cdot 18 \cdot 19 \\
-        & 4 B=17 \cdot 18 \cdot 19 \cdot 20 \\
+        & 4 B=1 \cdot 2 \cdot 3 \cdot 4+2 \cdot 3 \cdot 4 \cdot(5-1)+3 \cdot 4 \cdot 5 \cdot(6-2)+\ldots+17 \cdot 18 \cdot 19 \cdot(20-16) \\[5px]
+        & 4 B=1 \cdot 2 \cdot 3 \cdot 4+2 \cdot 3 \cdot 4 \cdot 5-1 \cdot 2 \cdot 3 \cdot 4+3 \cdot 4 \cdot 5 \cdot 6-2 \cdot 3 \cdot 4 \cdot 5+17 \cdot 18 \cdot 19 \cdot 20-16 \cdot 17 \cdot 18 \cdot 19 \\[5px]
+        & 4 B=17 \cdot 18 \cdot 19 \cdot 20 \\[5px]
         & B=17 \cdot 18 \cdot 19 \cdot 5=29070
         \end{aligned}
         $$
@@ -31,13 +31,13 @@
         Theo bài ra ta có: $\overline{(\mathrm{a}+\mathrm{n})(\mathrm{b}-\mathrm{n})(\mathrm{c}-\mathrm{n})}=\mathrm{n} \cdot \overline{\mathrm{abc}}$
         $$
         \begin{aligned}
-        & \Rightarrow 100(\mathrm{a}+\mathrm{n})+10(\mathrm{~b}-\mathrm{n})+(\mathrm{c}-\mathrm{n})=\mathrm{n}(100 \mathrm{a}+10 \mathrm{~b}+\mathrm{c}) \\
-        & \Rightarrow 100 \mathrm{a}+100 \mathrm{n}+10 \mathrm{~b}-10 \mathrm{n}+\mathrm{c}-\mathrm{n}=100 \mathrm{an}+10 \mathrm{~b}+\mathrm{cn} \\
-        & \Rightarrow 100(\mathrm{n}-1) \mathrm{a}+10(\mathrm{n}-1) \mathrm{b}+(\mathrm{n}-1) \mathrm{c}=89 \mathrm{n} \\
+        & \Rightarrow 100(\mathrm{a}+\mathrm{n})+10(\mathrm{~b}-\mathrm{n})+(\mathrm{c}-\mathrm{n})=\mathrm{n}(100 \mathrm{a}+10 \mathrm{~b}+\mathrm{c}) \\[5px]
+        & \Rightarrow 100 \mathrm{a}+100 \mathrm{n}+10 \mathrm{~b}-10 \mathrm{n}+\mathrm{c}-\mathrm{n}=100 \mathrm{an}+10 \mathrm{~b}+\mathrm{cn} \\[5px]
+        & \Rightarrow 100(\mathrm{n}-1) \mathrm{a}+10(\mathrm{n}-1) \mathrm{b}+(\mathrm{n}-1) \mathrm{c}=89 \mathrm{n} \\[5px]
         & \Rightarrow 89 \mathrm{n} \vdots \mathrm{n}-1 \text { mà }(89 ; \mathrm{n}-1)=1 \text { nên } n \vdots \mathrm{n}-1
         \end{aligned}
         $$
-        Tìm được $\mathrm{n}=2$ \\ 
+        Tìm được $\mathrm{n}=2$ \\[5px] 
         Số có 3 chữ số cần tìm là 178.
     \end{enumerate}
 } 
@@ -58,21 +58,21 @@
         $$
         \begin{aligned}
         & \Rightarrow \frac{\mathrm{x}}{4}=\frac{\mathrm{y}}{3} ; \frac{\mathrm{y}}{6}=\frac{\mathrm{z}}{5} \Rightarrow \frac{\mathrm{x}}{8}=\frac{\mathrm{y}}{6}=\frac{\mathrm{z}}{5}=\mathrm{k} \Rightarrow\left\{\begin{array}{l}
-        \mathrm{x}=8 \mathrm{k} \\
-        \mathrm{y}=6 \mathrm{k} \\
+        \mathrm{x}=8 \mathrm{k} \\[5px]
+        \mathrm{y}=6 \mathrm{k} \\[5px]
         \mathrm{z}=5 \mathrm{k}
-        \end{array}\right. \\
-        & \mathrm{xyz}=30 \Rightarrow 8 \mathrm{k} \cdot 6 \mathrm{k} \cdot 5 \mathrm{k}=30 \Rightarrow 240 \mathrm{k}^3=30 \Rightarrow \mathrm{k}=\frac{1}{2} \\
+        \end{array}\right. \\[5px]
+        & \mathrm{xyz}=30 \Rightarrow 8 \mathrm{k} \cdot 6 \mathrm{k} \cdot 5 \mathrm{k}=30 \Rightarrow 240 \mathrm{k}^3=30 \Rightarrow \mathrm{k}=\frac{1}{2} \\[5px]
         & \Rightarrow x=4, y=3, \mathrm{z}=\frac{5}{2}
         \end{aligned}
         $$
         \item Ta có:
         $$
         \begin{aligned}
-        & \left|\mathrm{x}-\frac{1}{2}\right|+\frac{3}{4}=\left|-1,6+\frac{3}{5}\right| \\
-        \Rightarrow & \left|\mathrm{x}-\frac{1}{2}\right|+\frac{3}{4}=\left|-\frac{8}{5}+\frac{3}{5}\right| \\
+        & \left|\mathrm{x}-\frac{1}{2}\right|+\frac{3}{4}=\left|-1,6+\frac{3}{5}\right| \\[5px]
+        \Rightarrow & \left|\mathrm{x}-\frac{1}{2}\right|+\frac{3}{4}=\left|-\frac{8}{5}+\frac{3}{5}\right| \\[5px]
         \Rightarrow & \left|\mathrm{x}-\frac{1}{2}\right|+\frac{3}{4}=1 \Rightarrow\left|\mathrm{x}-\frac{1}{2}\right|=\frac{1}{4} \Rightarrow\left[\begin{array}{l}
-        \mathrm{x}=\frac{3}{4} \\
+        \mathrm{x}=\frac{3}{4} \\[5px]
         \mathrm{x}=\frac{1}{4}
         \end{array}\right.
         \end{aligned}
@@ -98,21 +98,21 @@
         \item \begin{enumerate}
             \item $$
             \begin{aligned}
-& \text{Vì } \mathrm{f}(2)-\mathrm{f}(-1)=7 \Rightarrow(\mathrm{m}-2) \cdot 2-(\mathrm{m}-1) \cdot(-1)=7 \\
-& \Rightarrow 2 \mathrm{~m}-4+\mathrm{m}-1=7 \\
+& \text{Vì } \mathrm{f}(2)-\mathrm{f}(-1)=7 \Rightarrow(\mathrm{m}-2) \cdot 2-(\mathrm{m}-1) \cdot(-1)=7 \\[5px]
+& \Rightarrow 2 \mathrm{~m}-4+\mathrm{m}-1=7 \\[5px]
 & \Rightarrow 3 \mathrm{~m}-5=7 \Rightarrow \mathrm{m}=4
 \end{aligned}$$
 \item Với $\mathrm{m}=5$ ta có hàm số $\mathrm{y}=\mathrm{f}(\mathrm{x})=4 \mathrm{x}$
 $$
 \begin{aligned}
-& \text{Vì } f(3-2 x)=20 \Rightarrow 4(3-2 x)=20 \\
+& \text{Vì } f(3-2 x)=20 \Rightarrow 4(3-2 x)=20 \\[5px]
 & \Rightarrow 12-8 x=20 \Rightarrow x=-1
 \end{aligned}
 $$
         \end{enumerate}
 
 \item Giả sử cả 3 đơn thức $A, B, C$ cùng có giá trị âm
-$\Rightarrow$ A.B.C có giá trị âm. \\
+$\Rightarrow$ A.B.C có giá trị âm. \\[5px]
 Mặt khác: A.B.C $=\left(-\frac{1}{2} x^2 y z^2\right) \cdot\left(-\frac{3}{4} x y^2 z^2\right) \cdot x^3 y=\frac{3}{8} x^6 y^4 z^4$
 $$
 \text { Vì } \frac{3}{8} \mathrm{x}^6 \mathrm{y}^4 \mathrm{z}^4 \geq 0 \quad \forall x, y \Rightarrow \text { A.B.C } \geq 0 \quad \forall x ; y
@@ -131,7 +131,7 @@ Vậy ba đơn thức $A=-\frac{1}{2} x^2 y z^2, B=-\frac{3}{4} x y^2 z^2, C=x^3
     \item Trên tia IF lấy điểm $\mathrm{M}$ sao cho $\mathrm{IM}=\mathrm{IB}+\mathrm{IC}$. Chứng minh $\triangle \mathrm{BCM}$ là tam giác đều.
     \end{enumerate}
 \loigiai{
-    \includegraphics[width=0.7\textwidth]{2-4-lg.png}
+    \includegraphics[width=0.6\textwidth]{2-4-lg.png}
     \begin{enumerate}
         \item $\mathrm{BD}$ là phân giác của góc $\mathrm{ABC}$ nên $\mathrm{B}_1=\mathrm{B}_2=\frac{1}{2} \mathrm{ABC}$
         $C E$ là phân giác của góc $A C B$ nên $C_1=C_2=\frac{1}{2} A C B$
@@ -158,15 +158,15 @@ Vậy ba đơn thức $A=-\frac{1}{2} x^2 y z^2, B=-\frac{3}{4} x y^2 z^2, C=x^3
     Đặt $S=2.2^2+3.2^3+4.2^4+\ldots+n .2^{\mathrm{n}}$
 $$
 \begin{aligned}
-& S=2 S-S=\left(2 \cdot 2^3+3 \cdot 2^4+4 \cdot 2^5+\ldots+n \cdot 2^{n+1}\right)-\left(2 \cdot 2^2+3 \cdot 2^3+4 \cdot 2^4+\ldots+n \cdot 2^n\right) \\
+& S=2 S-S=\left(2 \cdot 2^3+3 \cdot 2^4+4 \cdot 2^5+\ldots+n \cdot 2^{n+1}\right)-\left(2 \cdot 2^2+3 \cdot 2^3+4 \cdot 2^4+\ldots+n \cdot 2^n\right) \\[5px]
 & S=n \cdot 2^{n+1}-2^3-\left(2^3+2^4+\ldots+2^{n-1}+2^n\right)
 \end{aligned}
 $$
-Đặt $\mathrm{T}=2^3+2^4+\ldots+2^{\mathrm{n}-1}+2^{\mathrm{n}}$. Tính được $\mathrm{T}=2 \mathrm{~T}-\mathrm{T}=2^{\mathrm{n}-1}-2^3$\\
+Đặt $\mathrm{T}=2^3+2^4+\ldots+2^{\mathrm{n}-1}+2^{\mathrm{n}}$. Tính được $\mathrm{T}=2 \mathrm{~T}-\mathrm{T}=2^{\mathrm{n}-1}-2^3$\\[5px]
 $
 \Rightarrow \mathrm{S}=\mathrm{n} \cdot 2^{\mathrm{n}+1}-2^3-2^{\mathrm{n}-1}+2^3=(\mathrm{n}-1) \cdot 2^{\mathrm{n}+1}
 $
-$\\
+$\\[5px]
 \Rightarrow(\mathrm{n}-1) \cdot 2^{\mathrm{n}+1}=2^{\mathrm{n}+11} \Rightarrow \mathrm{n}-1=2^{10} \Rightarrow \mathrm{n}=2^{10}+1=1025
 $
 }
