--- a/main_new.tex
+++ b/main_new.tex
@@ -6,7 +6,7 @@
 \usepackage{setspace}
 \usepackage{wrapfig}
 
-\setlist[enumerate]{topsep=6pt,itemsep=0.2cm}
+% \setlist[enumerate]{itemsep=0.1cm}
 
 %Gói căn lề giấy.
 \usepackage[top=2cm, bottom=2cm, left=1.5cm, right=1.5cm]{geometry}
